--- a/interaktywa-ocena/styles.css
+++ b/interaktywa-ocena/styles.css
@@ -1,6 +1,9 @@
 body {
 	margin: 0;
 	box-sizing: border-box;
+	background-color: #414141;
+	background-image: url("img/pattern-question-mark.png");
+	background-repeat: repeat;
 }
 
 * {
@@ -8,16 +11,18 @@ body {
 }
 
 .header {
-	height: 30vh;
+	height: 20vh;
 	text-align: center;
 }
 
 h1 {
-	font-size: 6vw;
+	font-size: 5vw;
+	color: darkgray;
 }
 
 .horizontal-container {
 	width: 100%;
+	height: 48vh;
 	
 	display: flex;
 	flex-direction: row;
@@ -28,24 +33,47 @@ h1 {
 .ocena {
 	user-select: none;
 	
-	width: 15%;
+	width: 18vw;
+	height: 100%;
 	aspect-ratio: 1/1;
 	
-	margin: 1.5%;
+	/*margin: 1.5%;*/
 	
-	overflow: hidden;
+	/*overflow: hidden;*/
 	
 	text-align: center;
-	font-size: 7vw;
-	color: white;
 	border-radius: 100%;
 	
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	flex-direction: row;
+	flex-wrap: wrap;
 }
 
-div div:nth-child(1) {
+.ocena img {
+	align-self: flex-start;
+	width: 100%;
+	filter: drop-shadow(1vw 8vw 2vw #2d2d2d);
+}
+
+.ocena img:active {
+	align-self: flex-start;
+	width: 98%;
+	margin: 1% 0;
+	opacity: 0.8;
+}
+
+.ocena p {
+	align-self: flex-end;
+	height: 20%;
+	font-size: 7vw;
+	color: #818181;
+	font-weight: bold;
+}
+
+
+/*div div:nth-child(1) {
   background: red;
 }
 
@@ -63,7 +91,7 @@ div div:nth-child(4) {
 
 div div:nth-child(5) {
   background: green;
-}
+}*/
 
 .ocena-liczba {
 	margin: 0;
