--- a/kolo-fortuny/styles.css
+++ b/kolo-fortuny/styles.css
@@ -22,6 +22,18 @@ button, input {
     display: flex;
 }
 
+#getLetter input{
+    width: 6vw;
+    font-size: 5vw;
+    text-align: center;
+}
+
+#setWheel input  {
+    width: 15vw;
+    font-size: 5vw;
+    text-align: center;
+}
+
 form > div {
     display: flex;
     flex-direction: column;
